Storybook deployment with GitHub action

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "release": "yarn build && auto shipit",
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=chpt_fc6802e98be6b6b"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -71,5 +72,7 @@
     "react-dom": {
       "optional": true
     }
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "learnstorybook-design-system-template@0.1.0"
 }
