--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=chpt_fc6802e98be6b6b"
+    "chromatic": "npx chromatic --project-token=chpt_fc6802e98be6b6b",
+    "test-storybook": "test-storybook",
+    "build-storybook-docs": "storybook build  --docs"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -37,8 +39,10 @@
     "@storybook/addon-links": "7.2.2",
     "@storybook/addon-onboarding": "1.0.8",
     "@storybook/blocks": "7.2.2",
+    "@storybook/jest": "^0.1.0",
     "@storybook/react": "7.2.2",
     "@storybook/react-vite": "7.2.2",
+    "@storybook/test-runner": "^0.13.0",
     "@storybook/testing-library": "0.2.0",
     "@vitejs/plugin-react": "^3.1.0",
     "auto": "^10.3.0",
